--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@splinetool/runtime": "^1.0.98",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "sass": "^1.74.1"
   },
   "devDependencies": {
