--- a/src/mock/projects.json
+++ b/src/mock/projects.json
@@ -114,7 +114,7 @@
             },
             "technologies": "React, Redux TK, React Router, HTML, Sass",
             "description":
-              "Un projet permettant de démontrer toute une palette de mes compétences",
+              "Projet 14: Refonte d'un site RH JQuery vers React.",
             "completedDate": "Janvier 2024",
             "typeOfContrat": "Personnal",
             "role": "FrontEnd & Motion & 3D Artist",
